<resources>
    <string name="app_name">MobileTestApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="activities_number">Numero delle attività: </string>
    <string name="last_activity_inserted">Ultima attività inserita: </string>
    <string name="digit_new_activity">Digita una nuova attività</string>
    <string name="add_new_activity">Aggiungi attività</string>
    <string name="task_name">Nome: %1$s</string>
    <string name="task_description">Descrizione: %1$s</string>
    <string name="task_completed">Completato: %1$b</string>
    <string name="task_priority">Priorita: %1$d</string>
</resources>