<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/numberOfActivityToBeDoneView"
        android:layout_width="368dp"
        android:layout_height="103dp"
        android:layout_gravity="center|left"
        android:layout_marginStart="20dp"
        android:layout_marginTop="184dp"
        android:text="@string/activities_number"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="290dp"
        android:layout_height="112dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="336dp"
        android:hint="Inserisci il nome"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="132dp"
        android:layout_height="95dp"
        android:layout_marginStart="317dp"
        android:layout_marginTop="636dp"
        android:clickable="true"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:text="@string/add_new_activity"/>

    <TextView
        android:id="@+id/lastActivityToBeDoneView"
        android:layout_width="210dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="548dp"
        android:text="@string/last_activity_inserted"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>